k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  annotations:
    dev.okteto.com/auto-ingress: 'true'
spec:
  type: ClusterIP
  ports:
    - name: tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: keycloak
    tier: backend
